Minor enhancements.